--- a/sys/net/gnrc/Makefile.dep
+++ b/sys/net/gnrc/Makefile.dep
@@ -19,6 +19,12 @@ ifneq (,$(filter gnrc_mac,$(USEMODULE)))
   endif
 endif
 
+ifneq (,$(filter gnrc_dmts_mac,$(USEMODULE)))
+  USEMODULE += periph_rtc
+  USEMODULE += ztimer64_xtimer_compat
+  USEMODULE += random
+endif
+
 ifneq (,$(filter gnrc_gomach,$(USEMODULE)))
   USEMODULE += gnrc_netif
   USEMODULE += gnrc_nettype_gomach
