sys/net/gnrc: Added dependencies for DMTS MAC

--- a/sys/net/gnrc/Makefile.dep
+++ b/sys/net/gnrc/Makefile.dep
@@ -21,6 +21,7 @@ endif
 
 ifneq (,$(filter gnrc_dmts_mac,$(USEMODULE)))
   USEMODULE += periph_rtc
+  USEMODULE += ztimer64_xtimer_compat
   USEMODULE += random
 endif
 
